Update man page and README
IP:BugInjector

--- a/README
+++ b/README
@@ -1,28 +1,61 @@
-Manipulate C-family ASTs with Clang
+# clang-mutate: Manipulate C-family ASTs with Clang
 
-This tool performs a number of operations on C-language source files.
+This tool provides an interface for performing operations on
+C and C++ source files. Using the
+[clang LibTooling interface](http://clang.llvm.org/docs/LibTooling.html),
+it obtains an abstract syntax tree (AST) representation of the source and
+provides options to inspect or alter the AST.
 
-      ids | prints the total number of statements
-   number | numbers each statement
- annotate | annotate each statement with its class
-     list | list every statement's id, class and range
-      cut | cuts that numbered statement
-   insert | copies the second numbered statement before the first
-     swap | swaps the two numbered statements
-      get | get the text of a stmt
-      set | set the text of a stmt
+## Inspection operations
+`clang-mutate` will output the ASTs for the source file(s) formatted either
+in JSON or S-expressions. Alternatively, it can be launched in interactive
+mode, and ASTs can be explored in a plain text format more similar to
+source code.
 
-Installation
+Some of the inspection operations are:
+* *-annotate* Display the source, annotating statements with their IDs and AST
+classes
+* *-ids* Display the number of statements in the source
+* *-list* List every statement's ID, AST class, and range
+* *-number* Display the source, annotating statements with their IDs
+* *-number-full* Display the source, annotating full statements with their IDs
+* *-cfg* Include control-flow information in ASTs
 
-  clang-mutate uses the clang LibTooling [1] interface.  Thus the
-  clang-mutate executable works best when run from the same directory
-  as clang.  Run "make install" to build and install.
+Refer to the [manual](man/clang-mutate.template.md) for complete documentation
+of available commands.
 
-  A PKGBUILD file is provided for installation on Arch Linux systems.
+## Mutation operands
+In `clang-mutate`, the mutation operands and operators are specified as separate
+flags. The `stmt1` and `stmt2` operands are used to specify a numeric AST ID to
+which an operator will be applied. The `value1` and `value2` operands are
+strings, and the `file1` and `file2` operands may be used to specify a file
+whose contents will be used as the strings for `value1` and `value2`,
+repectively.
 
-  [1] http://clang.llvm.org/docs/LibTooling.html
+## Mutation operations
+Some of the mutation operations that are available include:
+* *-cut* Cut `stmt1` from the source
+* *-insert* Insert `value1` before `stmt1`
+* *-set* Set the text of `stmt1` to `value1`
+* *-swap* Swap `stmt1` and `stmt2` in the source
 
-Examples
+Refer to the [manual](man/clang-mutate.template.md) for complete documentation
+of available mutation commands.
+
+## Installation
+
+As mentioned above, `clang-mutate` uses the clang LibTooling interface, which
+means that the `clang-mutate` executable works best when run from the same
+directory as clang. Run "make install" to build and install.
+
+A PKGBUILD file is provided for installation on Arch Linux systems.
+
+`clang-mutate` has only been tested on Linux, although we don't know of any
+reason it should not work in other OSes. If you encounter issues running in a
+different OS, please let us know by filing an issue report or a merge request.
+We're happy to incorporate changes that will enable more general execution.
+
+## Examples
 
     $ cat etc/hello.c
     #include <stdio.h>
@@ -33,29 +66,26 @@ Examples
     }
 
     $ clang-mutate -ids etc/hello.c --
-    Processing: hello.c.
-    9
+    12
 
     $ clang-mutate -number etc/hello.c --
-    Processing: hello.c.
     #include <stdio.h>
-    int main(int argc, char *argv[])
-    /* 0[ */{
-      /* 3[ *//* 2[ *//* 1[ */puts/* ]2 *//* ]3 */(/* 6[ *//* 5[ *//* 4[ */"hello"/* ]4 *//* ]5 *//* ]6 */);/* ]1 */
-      /* 7[ */return /* 8[ */0;/* ]7 *//* ]8 */
-    }/* ]0 */
+    /* 0.1[ */int main(/* 0.2[ */int argc,/* ]0.2 */ /* 0.3[ */char *argv[]/* ]0.3 */)
+    /* 0.4[ */{
+      /* 0.5[ *//* 0.6[ *//* 0.7[ */puts/* ]0.7 *//* ]0.6 */(/* 0.8[ *//* 0.9[ *//* 0.10[ */"hello"/* ]0.10 *//* ]0.9 *//* ]0.8 */);/* ]0.5 */
+      /* 0.11[ */return /* 0.12[ */0/* ]0.12 */;/* ]0.11 */
+    }/* ]0.4 */
+    /* ]0.1 */
 
-    $ clang-mutate -cut -stmt1=7 etc/hello.c --
-    Processing: hello.c.
+    $ clang-mutate -cut -stmt1=11 etc/hello.c --
     #include <stdio.h>
     int main(int argc, char *argv[])
     {
       puts("hello");
-      /* cut:7 */;
+
     }
 
-    $ clang-mutate -set -stmt1=5 -value='"good bye"' etc/hello.c --
-    Processing: /home/eschulte/src/clang-mutate/hello.c.
+    $ clang-mutate -set -stmt1=9 -value1='"good bye"' etc/hello.c --
     #include <stdio.h>
     int main(int argc, char *argv[])
     {
@@ -68,25 +98,26 @@ Examples
     $ make etc/loop
     cc     etc/loop.c   -o etc/loop
     $ ./etc/loop
-    hello 0
-    hello 1
-    hello 2
-    hello 3
-    hello 4
-    hello 5
-    hello 6
-    hello 7
-    hello 8
-    hello 9
+    hello 0 10
+    hello 1 9
+    hello 2 8
+    hello 3 7
+    hello 4 6
+    hello 5 5
+    hello 6 4
+    hello 7 3
+    hello 8 2
+    hello 9 1
+
     $ ./tools/perforate-loops etc/loop.c > /tmp/faster.c
     $ make /tmp/faster
     cc     /tmp/faster.c   -o /tmp/faster
     $ /tmp/faster
-    hello 0
-    hello 2
-    hello 4
-    hello 6
-    hello 8
+    hello 0 10
+    hello 2 8
+    hello 4 6
+    hello 6 4
+    hello 8 2
 
   replace string literals using tools/strings-to
 
